--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-    <img src="tuagif.gif" alt="GIF animata">
+    <img src="Daniele Moretti.rtf" alt="GIF animata">
 </body>
 </html>
