--- a/index.html
+++ b/index.html
@@ -1,36 +1,98 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2639
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\froman\fcharset0 Times-Bold;\f1\froman\fcharset0 Times-Roman;}
-{\colortbl;\red255\green255\blue255;\red0\green0\blue0;}
-{\*\expandedcolortbl;;\cssrgb\c0\c0\c0;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\deftab720
-\pard\pardeftab720\sa240\partightenfactor0
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Informazioni Personali</title>
+    
+    <!-- Aggiungi il link per caricare il font da Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
-\f0\b\fs24 \cf0 \expnd0\expndtw0\kerning0
-\outl0\strokewidth0 \strokec2 Nome completo
-\f1\b0 : Daniele Moretti\uc0\u8232 
-\f0\b Data di nascita
-\f1\b0 : 27 giugno 1978\uc0\u8232 
-\f0\b Nazionalit\'e0
-\f1\b0 : Italiana\uc0\u8232 
-\f0\b Codice fiscale
-\f1\b0 : MRTDNL78H27L736S\uc0\u8232 
-\f0\b Indirizzo
-\f1\b0 : Via Torino, 15, 10121 Torino (TO)\uc0\u8232 
-\f0\b Numero di telefono
-\f1\b0 : +39 340 5678912\uc0\u8232 
-\f0\b Email
-\f1\b0 : daniele.moretti78@mail.com\uc0\u8232 
-\f0\b IBAN
-\f1\b0 : IT66N0200805032000400003456\uc0\u8232 
-\f0\b Segni caratteriali
-\f1\b0 : Paziente, riflessivo, gentile.\uc0\u8232 
-\f0\b Ideali
-\f1\b0 : Promuove il volontariato e la solidariet\'e0.\uc0\u8232 
-\f0\b Orientamento religioso
-\f1\b0 : Cristiano cattolico.\uc0\u8232 
-\f0\b Orientamento sessuale
-\f1\b0 : Eterosessuale.\uc0\u8232 
-\f0\b Posizione esatta dello scatto
-\f1\b0 : 45.0703\'b0 N, 7.6869\'b0 E (Piazza Castello, Torino).\
-}
+    <style>
+        body {
+            font-family: 'Press Start 2P', cursive; /* Usa il font pixelato */
+            background-color: black;
+            color: white;
+            text-align: center;
+            padding: 30px;
+        }
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            line-height: 1.6;
+        }
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 1.2em;
+            margin-bottom: 15px;
+        }
+        .data-section {
+            margin-top: 30px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>INFORMAZIONI SUL SOGGETTO</h1>
+        
+        <div class="data-section">
+            <p><strong>[Nome completo]:</strong> Daniele Moretti</p>
+            <p><strong>[Data di nascita]:</strong> 27/08/1960</p>
+            <p><strong>[Nazionalità]:</strong> Italiana</p>
+            <p><strong>[Codice Fiscale]:</strong> MRTDNL78H27L736S</p>
+            <p><strong>[Indirizzo]:</strong> Via Torino, 15, 10121 Torino (TO)</p>
+            <p><strong>[Numero di telefono]:</strong> +39 340 5678912</p>
+            <p><strong>[Email]:</strong> daniele.moretti78@mail.com</p>
+            <p><strong>[IBAN]:</strong> IT66N0200805032000400003456</p>
+        </div>
+
+        <div class="data-section">
+            <p><strong>[Segni caratteriali]:</strong> Paziente, riflessivo, gentile.</p>
+            <p><strong>[Ideali]:</strong> Promuove il volontariato e la solidarietà.</p>
+            <p><strong>[Orientamento religioso]:</strong> Cristiano cattolico.</p>
+            <p><strong>[Orientamento sessuale]:</strong> Eterosessuale.</p>
+            <p><strong>[Posizione esatta dello scatto]:</strong> 45.0703° N, 7.6869° E</p>
+        </div>
+
+        <div class="data-section">
+            <p>...</p>
+            <p>...</p>
+            <p>...</p>
+            <p>...</p>
+            <p>...</p>
+        </div>
+
+        <div class="data-section">
+            <p>Questi dati sono fittizi e creati esclusivamente per dimostrare cosa accade quando la privacy di un individuo viene violata attraverso l’uso di social network, cookie e strumenti online.</p>
+            <p>Le informazioni raccolte e condivise in modo non autorizzato possono rivelare dettagli profondi e personali, evidenziando quanto sia importante tutelare la propria sicurezza digitale e navigare con consapevolezza.</p>
+        </div>
+
+        <div class="data-section">
+            <p>Ti sei mai chiesto cosa accade ai tuoi dati quando clicchi "Accetta"?</p>
+            <p>Ogni volta che autorizzi i cookie o condividi un post sui social, sai davvero chi sta osservando?</p>
+            <p>Ti sembra normale che dopo aver cercato un prodotto online, inizi a vedere pubblicità ovunque?</p>
+            <p>Ogni "Mi piace" contribuisce a creare un profilo su di te.</p>
+            <p>Ti senti a tuo agio sapendo che aziende o agenzie potrebbero usarlo per influenzarti?</p>
+            <p>E cosa succede quando inserisci il tuo indirizzo email?</p>
+            <p>Sai che potrebbe essere venduto o usato per scopi che non conosci?</p>
+            <p>Ti hanno detto che i cookie sono innocui, ma ti sei mai chiesto perché tracciano ogni tua mossa?</p>
+            <p>E quanto sei certo che i tuoi dati siano davvero al sicuro?</p>
+            <p>Violazioni e furti di informazioni accadono perché spesso le piattaforme non proteggono abbastanza.</p>
+        </div>
+
+        <div class="data-section">
+            <p>Pensi di essere libero online?</p>
+            <p>...</p>
+            <p>...</p>
+            <p>...</p>
+            <p>Oppure percepisci un’ombra invisibile che studia ogni tua scelta, prevedendo le tue mosse?</p>
+            <p>Se tutto ciò che fai contribuisce a creare un’immagine digitale di te, un’immagine che può essere comprata e venduta, come ti sentiresti?</p>
+            <p>Non è il momento di ripensare a cosa condividi e a chi lo permetti?</p>
+            <p>Chi controlla davvero la tua vita online?</p>
+        </div>
+    </div>
+</body>
+</html>
