--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informazioni Personali</title>
     
-    <!-- Aggiungi il link per caricare il font da Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <!-- Aggiungi il link per caricare il font IBM Plex Mono da Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
 
     <style>
         body {
-            font-family: 'Press Start 2P', cursive; /* Usa il font pixelato */
+            font-family: 'IBM Plex Mono', monospace; /* Usa il font del terminale */
             background-color: black;
             color: white;
             text-align: center;
