--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <h1>INFORMAZIONI SUL SOGGETTO</h1>
     <div class="content">
-        [Nome completo]: Marta Russo<br>
+        [Nome completo]: Daniele Moretti<br>
         [Data di nascita]: 02/05/2002<br>
         [Nazionalità]: Italiana<br>
         [Codice fiscale]: RSSMRT85C54H501B<br>
