--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             [Data di nascita]: 27/03/1966<br>
             [Nazionalità]: Italiana<br>
             [Codice fiscale]: MRTDNL78H27L736S<br>
-            [Indirizzo]: Via Giuseppe Mazzini, 25, 20123 Milano<br>
+            [Indirizzo]: Via Giuseppe Mazzini, 25, 20123, Milano<br>
             [Numero di telefono]: +39 340 5678912<br>
             [Email]: daniele.moretti78@mail.com<br>
             [IBAN]: IT66N0200805032000400003456<br>
